Bug 1036657 - Remove bad assertion on HasPositiveWCoord(), good example of why asserting on floating point values is often a bad idea - r=mattwoodrow